--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>webstore-microservice</name>
 	<description>This is a microservice based application for a Webstore.</description>
+	<packaging>pom</packaging>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+	<modules>
+		<module>product-service</module>
+	</modules>
 
 </project>
