correct all problems in product

--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -7,3 +7,15 @@ spring:
       server:
         git:
           uri: https://github.com/JoAbyssinia/springcloud.git
+
+          clone-on-start=true: true
+
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8081/eureka,http://localhost:8082/eureka
+  instance:
+    hostname: localhost
