--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -2,10 +2,24 @@ server:
   port: 8091
 
 spring:
-  application:
-    name: product-service
-  cloud:
-    config:
-      url: http://localhost:9999
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: webstore
 
+
+
+#
+#spring:
+#  application:
+#    name: product-service
+#  cloud:
+#    config:
+#      url: http://localhost:9999
+
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8081/eureka,http://localhost:8082/eureka
 
