add product and stock in API gateway service config

--- a/webshop-gateway/src/main/resources/bootstrap.yml
+++ b/webshop-gateway/src/main/resources/bootstrap.yml
@@ -15,3 +15,13 @@ spring:
           uri: lb://customer-service
           predicates:
             - Path=/api/v1/customers/**
+        - id: product-service
+          uri: lb://product-service
+          predicates:
+            - path=/api/v1/product/**
+        - id: stock-service
+          uri: lb://stock-service
+          predicates:
+            - path=//api/v1/stock/**
+
+
