add logging save location

--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -8,3 +8,13 @@ spring:
       port: 27017
   zipkin:
     base-url: http://localhost:8083/
+
+
+logging:
+  file:
+    name: /home/yohannes-ubuntu/elk-logs/customer-log
+
+
+
+
+
