--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.2</spring-cloud.version>
+		<skipTest>true</skipTest>
 	</properties>
 	<dependencies>
 		<dependency>
