--- a/ShoppingCart-Query/pom.xml
+++ b/ShoppingCart-Query/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>kafka-streams</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter</artifactId>
 		</dependency>
