--- a/shoppingcart-query/src/main/resources/application.yml
+++ b/shoppingcart-query/src/main/resources/application.yml
@@ -18,9 +18,8 @@ spring:
         spring:
           json:
             trusted:
-              packages: *
+              packages: edu.miu.ShoppingCartQuery.intergration
 
 
-
-  logging.level.root= ERROR
-  org.springframework= ERROR
+#logging.level.root = ERROR
+#org.springframework= ERROR
