--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<module>webshop-gateway</module>
 		<module>kafka-service</module>
 		<module>shoppingcart-command</module>
-		<module>ShoppingCart-Query</module>
+		<module>shoppingcart-query</module>
 	</modules>
 
 </project>
