--- a/shoppingcart-query/src/main/resources/application.yml
+++ b/shoppingcart-query/src/main/resources/application.yml
@@ -1,24 +1,27 @@
-server:
-  port: 8097
+#server:
+#  port: 8097
+#
+#logging:
+#  file:
+#    name: /Users/bijayshrestha/elk-logs/customer-log
 
-logging:
-  file:
-    name: /Users/bijayshrestha/elk-logs/customer-log
 
-spring:
-  kafka:
-    bootstrap-servers:
-      - localhost:9092
-    consumer:
-      group-id: gid
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      properties:
-        spring:
-          json:
-            trusted:
-              packages: edu.miu.ShoppingCartQuery.intergration
+#spring:
+#  kafka:
+#    bootstrap-servers:
+#      - http://localhost:9092
+#    consumer:
+#      group-id: gid
+#      auto-offset-reset: earliest
+#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+#      properties:
+#        spring:
+#          json:
+#            trusted:
+#              packages: edu.miu.ShoppingCartQuery.intergration
+
+
 
 
 #logging.level.root = ERROR
