--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<module>shoppingcart-command</module>
 		<module>shoppingcart-query</module>
 		<module>order-service</module>
+		<module>webshop-client</module>
 	</modules>
 
 </project>
