--- a/webshop-gateway/src/main/resources/bootstrap.yml
+++ b/webshop-gateway/src/main/resources/bootstrap.yml
@@ -27,6 +27,10 @@ spring:
           uri: lb://shoppingcart-command
           predicates:
             - Path=/api/v1/shopping-cart/**
+        - id: shoppingcart-query
+          uri: lb://shoppingcart-query
+          predicates:
+            - Path=/api/v1/shopping-cart-query/**
         - id: order-service
           uri: lb://order-service
           predicates:
